# Telegram-CLI

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: init.rs  login.rs  main.rs  output.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  ipc.rs  lib.rs  protocol.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: auth.rs  cache.rs  dispatcher.rs  handler.rs  ipc.rs  main.rs  server.rs  tdlib.rs  tdlib_client.rs
crates/tdjson/: Cargo.toml  build.rs
crates/tdjson/src/: lib.rs
crates/tg/: Cargo.toml
crates/tg-core/: Cargo.toml
crates/tg-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/tg-ipc/: Cargo.toml
crates/tg-ipc/src/: client.rs  codec.rs  lib.rs  protocol.rs
crates/tg/src/: init.rs  login.rs  main.rs  output.rs  tui.rs
crates/tgcd/: Cargo.toml
crates/tgcd/src/: auth.rs  cache.rs  dispatcher.rs  handler.rs  ipc.rs  main.rs  media.rs  tdlib.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: tutorial.md
packaging/arch/: PKGBUILD
packaging/debian/: control  copyright  rules
packaging/rpm/: telegram-cli.spec
packaging/termux/: install-termux.sh
scripts/: build-tdlib.sh  install.ps1  install.sh  tgcd.service  uninstall.sh
