[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }
# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# errors
anyhow = "1"
thiserror = "2"
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap = { version = "4", features = ["derive"] }
# TUI
ratatui = "0.29"
crossterm = "0.28"
# TDLib
tdlib = "0.7"

# workspace crates
tg-common   = { path = "crates/common" }
tg-daemon   = { path = "crates/daemon" }
tg-cli      = { path = "crates/cli" }
tg-tui      = { path = "crates/tui" }
