[workspace]
resolver = "2"
members = [
    "crates/tdjson",
    "crates/tg-core",
    "crates/tg-ipc",
    "crates/tgcd",
    "crates/tg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# async runtime
tokio         = { version = "1", features = ["full"] }
tokio-util    = { version = "0.7", features = ["codec"] }
futures-util  = "0.3"
# serialization
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
# errors
anyhow        = "1"
thiserror     = "2"
# logging
tracing       = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# CLI
clap          = { version = "4", features = ["derive"] }
# TUI
ratatui       = "0.29"
crossterm     = "0.28"
# database
sqlx          = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
# config & secrets
directories   = "6"
toml          = "0.8"
keyring       = { version = "3", features = ["sync-secret-service"] }
# concurrency
dashmap       = "6"
uuid          = { version = "1", features = ["v4", "serde"] }
bytes         = "1"
chrono        = "0.4"

# workspace crates
tg-tdjson     = { path = "crates/tdjson" }
tg-core       = { path = "crates/tg-core" }
tg-ipc        = { path = "crates/tg-ipc" }
tgcd          = { path = "crates/tgcd" }
tg            = { path = "crates/tg" }
