[package]
name = "tg-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tg"
path = "src/main.rs"

[dependencies]
tg-common = { workspace = true }

tokio           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
tracing         = { workspace = true }
tracing-subscriber = { workspace = true }
clap            = { workspace = true }
toml            = "0.8"
dirs            = "5"
chrono          = "0.4"
