[package]
name = "tg-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tg"
path = "src/main.rs"

[dependencies]
tg-common     = { workspace = true }

tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
clap          = { workspace = true }
directories   = { workspace = true }
toml          = { workspace = true }
chrono        = "0.4"
