[package]
name = "tg-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }
futures-util = { workspace = true }
bytes       = "1"
tracing     = { workspace = true }
directories = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
