[package]
name = "tg-daemon"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tg-daemon"
path = "src/main.rs"

[dependencies]
tg-common = { workspace = true }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
clap        = { workspace = true }
tdlib       = { workspace = true }
dirs        = "5"
toml        = "0.8"
