[package]
name = "tg-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
directories = { workspace = true }
toml        = { workspace = true }
keyring     = { workspace = true }
