[package]
name = "tgcd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tgcd"
path = "src/main.rs"

[dependencies]
tg-core     = { workspace = true }
tg-ipc      = { workspace = true }
tg-tdjson   = { workspace = true }

tokio         = { workspace = true }
tokio-util    = { workspace = true }
futures-util  = { workspace = true }
bytes         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
anyhow        = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
clap          = { workspace = true }
directories   = { workspace = true }
toml          = { workspace = true }
keyring       = { workspace = true }
sqlx          = { workspace = true }
dashmap       = { workspace = true }
uuid          = { workspace = true }
