[package]
name = "tg-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tg-tui"
path = "src/main.rs"

[dependencies]
tg-common = { workspace = true }

tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui     = { workspace = true }
crossterm   = { workspace = true }
toml        = "0.8"
dirs        = "5"
chrono      = "0.4"
